T-12942 appraisals: Fixed display issue where visible to overlaps entry field
Reviewed-on: https://review.totaralms.com/5978
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/standardtotararesponsive/style/core.css
+++ b/theme/standardtotararesponsive/style/core.css
@@ -823,11 +823,6 @@ input[type="checkbox"] {
         text-align: right;
     }
 
-    .visibleto {
-        position: static;
-        display: block;
-    }
-
     /* this definition is required to fix the menu expand and collapse on the iPhone
      * have upstreamed this (MDL-43989)
      */
@@ -837,6 +832,13 @@ input[type="checkbox"] {
     .nav-collapse.collapse {
         height: auto;
         display: none;
+    }
+}
+@media screen and (max-width: 1199px) {
+    .visibleto,
+    .visibleto-review {
+        position: static;
+        display: block;
     }
 }
 /**
